# WineHooks

./: .gitignore  README.md
.github/: copilot-instructions.md
Ahk/: Compile.ahk  CreateProcessHooks.ahk  D3D.hooks.ahk  D3D10.hooks.ahk  D3D11.hooks.ahk  D3D12.Hooks.ahk  D3D8.hooks.ahk  D3D9.hooks.ahk  D3DX9.ahk  Injector.ahk  Injector64.ahk  Injector_common.ahk  LayerTextSwap.ahk  MCI.ahk  Todo.txt  WinAPI.hooks.ahk  dinput.hooks.ahk  dshow.hooks.ahk  dsound.hooks.ahk  exlib.ahk  gl.hooks.ahk  last  main.ini  remote_lib.ahk
Ahk/GUI/: GUIMain.ahk  TextureCompiler.ahk  cheat engine.ahk  lib.txt  main.html
Ahk/InstallShield/: InstallShield.ahk  InstallShield.ahk.bak  InstallShield.ini
Ahk/Lib/: DDSFile.ahk  DInputEmu.ahk  FileHooks.ahk  GUID.ahk  HDHooks.ahk  Lib.ahk  Syslinks.ahk  (+13 more)
CheatTables/: A Short Hike.CT  Alice.CT.ahk  Alien Earth.CT.ahk  Aliens vs Predator 2.CT  Aliens vs Predator 2.CT.ahk  Aliens vs Predator Classic.CT  Aliens vs Predator Classic.CT.ahk  Alone in the Dark - The New Nightmare.CT  Anachronox.CT  Anachronox.CT.ahk  Another World - 20th Anniversary edition.CT  Bermuda Syndrome - SDL.CT  Bermuda Syndrome - SDL.CT.ahk  Bioshock.CT.ahk  Blade of Darkness Classic.CT.ahk  Blood - Fresh Supply.CT  Blood - Fresh Supply.CT.ahk  Blood 2.CT  Blood 2.CT.ahk  Braid.CT  Brothers.CT  Brothers.CT.ahk  CEPluginLib.ahk  CheatEngine.ct  Contrast.CT  Contrast.CT.ahk  Control.CT  Control.ct.ahk  Control_DX12.CT  Crysis.CT  Crysis.CT.ahk  Crysis2.CT  Crysis2.CT.ahk  Dark Earth.CT  Dark Earth.CT.ahk  Dark Vengeance.CT  Dark Vengeance.CT.ahk  Darkstone.CT.ahk  Death's Door.CT.ahk  DeusEx.CT  (+155 more)
Help/: Alice.txt  Bermuda.txt  CPU.txt  DX10.txt  DX11.txt  DX12.txt  DX8.txt  DX9.txt  DeusEx.txt  Dev.txt  Dino Crisis.txt  DinputDpadModes.txt  DinputLsModes.txt  DinputModes.txt  DinputRsModes.txt  Eden.txt  Gl.txt  Home2.txt  HomeQt.txt  How to Choose.txt  IShield32.txt  IShield32.txt.txt  IamAlive.txt  Input.txt  InstallShield.txt  JediKnight.txt  Kain.txt  Lba.txt  Lba2.txt  Main.txt  Martian.txt  Onimusha.txt  Requiem.txt  ResidentEvil.txt  ResidentEvil2.txt  ResidentEvil3.txt  SOT.txt  Sanitarium.txt  Slave Zero.txt  SoulReaver.txt  (+8 more)
Profiles/: Alice - Remaster.ini  Alien Earth.ini  Aliens vs Predator 2.ini  Aliens vs Predator classic - D3D9.ini  Alone in the Dark - The New Nightmare.ini  Army men RTS - Demo.ini  Bermuda Syndrome - SDL.ini  Bioshock - D3D10.ini  Bioshock 2 - D3D10.ini  Blade of Darkness Classic - D3D7.ini  Blade of Darkness Classic - OpenGl.ini  Bladerunner.ini  Blood 2.ini  Clive Barker's Undying.ini  Contrast.ini  Control - D3D11.ini  Control - D3D12.ini  Crysis 2 - D3D11.ini  Dark Earth.ini  Dark vengeance.ini  Darkstone.ini  Death's Door - D3D11.ini  DeusEx - D3D7.ini  Diablo 2.ini  Diablo.ini  Die by the sword.ini  Dino Crisis.ini  Drakan.ini  Ecstatica 2.ini  Ecstatica.ini  Enclave - D3D8.ini  F.E.A.R.ini  Fallout - D3D9.ini  Fallout - DirectDraw 7.ini  Fallout - DirectDraw.ini  Fallout 2 - D3D9.ini  Fallout 2 - DirectDraw 7.ini  Fallout 2 - DirectDraw.ini  Forsaken.ini  Grim Fandango.ini  (+101 more)
REMOVAL_LOGS/: mingw-removal-2026-01-10.txt
Scripts/: Alice - Remaster.bat  Alice - Remaster.ini  Alice.ahk  Alice.ahk.bak  Alice.bat  Alice.ini  BladeofDarknes.ahk.bak  Dark Earth.ahk.bak  Dark Earth.bat  Dark Earth.ini  Dark vengeance.ahk  Dark vengeance.ahk.bak  DeusEx - D3D7.ini  DeusEx - OpenGl.ini  DeusEx(OpenGl).ahk.bak  DeusEx.ahk  DeusEx.ahk.bak  DeusEx.bat  Dino Crisis.ahk  Dino Crisis.ahk.bak  Dino Crisis.bat  Dino Crisis.ini  Enclave.ahk  Fallout-dd7.ahk.bak  Fallout.ahk  Fallout.ahk.bak  Grim.ahk  Grim.ahk.bak  HOD.ahk.bak  Half life.ahk  Half life.ahk.bak  Heart of Darkness.ini  Horace.ahk.bak  Im Alive.ini  Jedi Knight.ahk  Jedi Knight.ahk.bak  KHG.ahk.bak  Kain.ahk  Kain.ahk.bak  Kega.ahk.bak  (+118 more)
Shaders/: CS_5.0.hlsl  HLSL_4.0.hlsl  PS_3.0.hlsl  xBRz.fx  xBRz.glsl
dlls/: CMakeLists.txt  TestsAndTools.ipynb  peixoto.def
dlls/Headers/: 3DMigoto-Assembler.h  D3D11Hooks.h  D3D12Hooks.h  D3D12Utils.h  D3D8Hooks.h  D3D8HooksWine.h  D3D9Hooks.h  D3DHooks.h  D3DUtils.h  D3D_DDI.h  DDSurface.h  DInputHooks.h  DSoundHooks.h  Dbug.h  EZString.h  FileSystem.h  FilesSystemHooks.h  GDI_Hooks.h  GL_Hooks.h  Input.h  LibVlcPlayer.h  MouseHooks.h  Proxydll.h  Scalers.h  Sync.h  TextureScalers.h  WinMM_Hooks.h  Wine.Hooks.h  collections.h  d3dumddi.h  dllmain.h  sethooks.h  xbrz.h
dlls/Includes/EAX/: eax_presets.h
dlls/Includes/cheat-engine/7_5/: cepluginsdk.h
dlls/Includes/mingw-d3dtypes-fix/: d3dtypes.h
dlls/Includes/nvapi/: NvApiDriverSettings.h  nvapi.h  nvapi_lite_common.h
dlls/Includes/nvapi/lib/: nvapi.lib
dlls/LAYERS/: LayersCommon.h
dlls/LAYERS/DDRAW/Headers/: Direct3D.h  DirectDraw.h
dlls/LAYERS/DDRAW/Sources/: Direct3DDevice.cpp  Direct3DMaterial.cpp  Direct3DVertexBuffer.cpp  Direct3DViewport.cpp  DirectDraw.cpp  DirectDrawClipper.cpp  DirectDrawPalette.cpp  DirectDrawSurface.cpp
dlls/LAYERS/DINPUT/Headers/: DirectInput.h
dlls/LAYERS/DINPUT/Sources/: DirectInput.cpp
dlls/LAYERS/DSOUND/Headers/: DirectSound.h  eax_props.h
dlls/LAYERS/DSOUND/Sources/: DirectSound.cpp
dlls/Simple-HTTP-Server/: LICENSE  README.md  build.bat  http_server.cpp  log.cpp  main.cpp  utils.cpp
dlls/Simple-HTTP-Server/headers/: http_server.h  log.h  utils.h
dlls/Simple-HTTP-Server/public/: index.html
dlls/Sources/: 3DMigoto-Assembler.cpp  CheatEngine.cpp  CreateprocessHooks.cpp  D3D10Hooks.cpp  D3D10Utils.cpp  D3D11Hooks.cpp  D3D11Utils.cpp  D3D12Hooks.cpp  D3D12Utils.cpp  D3D8Hooks.cpp  D3D8HooksWine.cpp  D3D9Hooks.cpp  D3D9Utils.cpp  D3DHooks.cpp  D3DHooksEx.cpp  D3DUtils.cpp  D3D_DDI.cpp  DDSurface.c  DDSurfaceCpp.cpp  DInputHooks.cpp  DSoundHooks.cpp  Dbug.cpp  EZString.cpp  FileSystem.cpp  FilesSystemHooks.cpp  GDI_Hooks.cpp  GL_Hooks.cpp  HTTPSever.cpp  Input.cpp  LibVlcPlayer.cpp  MouseHooks.cpp  NVAPISettings.cpp  Proxydll.cpp  Scalers.cpp  Sockets.cpp  Sync.cpp  Test.cpp  TextureScalers.cpp  WinMM_Hooks.cpp  Wine.Hooks.cpp  (+7 more)
dlls/minhook/: CMakeLists.txt  N
dlls/minhook/src/: trampoline.c
dlls/x32/: CMakeLists.txt
dlls/x64/: CMakeLists.txt
(+345 files in other folders)
